# CritClick

./: .clinerules  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  settings.example.toml  tester.md
.claude/: settings.local.json
.github/workflows/: ci.yml
deploy/: README.md  tester@.service  tester@.timer
deploy/macos/: README.md  io.ubcs.tester.plist.template
deploy/windows/: README.md  tester-task.ps1
docs/: CI_SUGGESTED.md  DEV_MACOS.md  DEV_WINDOWS.md
runs/20260704T221316-907720/: run_manifest.json
src/tester/: __init__.py  __main__.py  cli.py  client.py  config.py  harness.py  launcher.py  models.py  perception.py  prompts.py  screen.py  window.py
src/tester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_block_external_routing.py  test_client.py  test_config.py  test_harness.py  test_launcher.py  test_models.py  test_prompts.py  test_runs.py  test_screen.py
