[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tester"
version = "0.1.0"
description = "Vision-based autonomous game testing harness supporting any OpenAI-compatible LLM endpoint"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Tester Contributors" },
]
keywords = ["game-testing", "llm", "vision", "automation", "renpy", "godot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "openai>=1.0.0",
    "tomli>=2.0.0 ; python_version < '3.11'",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.0",
]

[project.optional-dependencies]
headless = ["python-xlib>=0.33"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy>=1.0"]

[project.scripts]
tester = "tester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
