[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tester"
version = "1.0.0"
description = "Vision-based autonomous game testing harness supporting any OpenAI-compatible LLM endpoint"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Tester Contributors" },
]
keywords = ["game-testing", "llm", "vision", "automation", "renpy", "godot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "openai>=1.0.0",
    "tomli>=2.0.0 ; python_version < '3.11'",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.0",
]

[project.optional-dependencies]
headless = ["python-xlib>=0.33"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy>=1.0", "ruff>=0.4.0"]

[project.scripts]
tester = "tester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
